# aide-examples

./: Cargo.toml
examples/custom-apperror/: Cargo.toml  README.md
examples/custom-apperror/src/: docs.rs  error.rs  extractors.rs  main.rs
examples/custom-apperror/src/extractor-tobemoved/: mod.rs
examples/custom-apperror/src/extractors/: auth.rs  json.rs  mod.rs  path.rs
examples/custom-apperror/src/todos/: routes.rs
examples/infallible-extractors/: Cargo.toml  README.md
examples/infallible-extractors/src/: docs.rs  error.rs  main.rs
examples/infallible-extractors/src/extractors/: auth.rs  json.rs  mod.rs  path.rs
examples/infallible-extractors/src/todos/: routes.rs
