[package]
name = "custom-apperror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-macros = "0.4"
axum-extra = "0.9"
aide = { version = "0.13", features = [
    "redoc",
    "scalar",
    "axum",
    "axum-extra",
    "macros",
] }
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["serde", "v4"] }
