[package]
name = "infallible-extractors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
strum = "0.26"
strum_macros = "0.26"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-service = "0.3"
axum = { version = "0.7", features = ["ws"] }
axum-macros = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
aide = { version = "=0.13.2", features = [
    "redoc",
    "scalar",
    "axum",
    "axum-extra",
    "macros",
] }
indexmap = { version = "2.1", features = ["serde"] }
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["serde", "v4"] }
